--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -14,7 +14,7 @@ permissions:
   contents: read
       
 jobs:
-  test:
+  test-ubuntu:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -27,7 +27,24 @@ jobs:
           aws-region: us-west-2
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
-      - name: Validate AMI
-        run: make validate-ami
-      - name: Build AMI
-        run: make build-ami
+      - name: Validate Ubuntu AMI
+        run: make validate-ami-ubuntu
+      - name: Build Ubuntu AMI
+        run: make build-ami-ubuntu
+  test-rhel:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
+          aws-region: us-west-2
+          # 21600 seconds == 6 hours
+          role-duration-seconds: 21600
+      - name: Validate RHEL AMI
+        run: make validate-ami-rhel
+      - name: Build RHEL AMI
+        run: make build-ami-rhel
