--- a/.github/workflows/test-rke2-install.yaml
+++ b/.github/workflows/test-rke2-install.yaml
@@ -1,16 +1,69 @@
 name: Test Creating RKE2 Cluster
 
-# TODO figure out when this should trigger. Needs published AMI to work
 on:
-  workflow_call:
+  repository_dispatch:
+    types: [test-command]
 
 permissions:
   id-token: write
-  contents: read
+  contents: write # For executing the repository_dispatch event
+  pull-requests: write # For doing the emoji reaction on a PR comment
+
+defaults:
+  run:
+    # We need -e -o pipefail for consistency with GitHub Actions' default behavior
+    shell: bash -e -o pipefail {0}
 
 jobs:
+  # Parse the command, so we can decide which tests to run.
+  # Valid commands: "/test all", "/test ubuntu", "/test rhel"
+  # We can do as many of these as we want to get as granular as we want.
+  parse:
+    runs-on: ubuntu-latest
+    outputs:
+      run-ping: ${{ steps.parse.outputs.run-ping }}
+      run-test-clean-install-ubuntu: ${{ steps.parse.outputs.run-test-clean-install-ubuntu }}
+      run-test-clean-install-rhel: ${{ steps.parse.outputs.run-test-clean-install-rhel }}
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Parse Args
+        id: parse
+        uses: ./.github/actions/parse-test
+
+  # Update the comment that triggered the /test command to show the run url
+  comment:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        # with:
+        #   token: ${{ secrets.GITHUB_TOKEN }}
+        #   repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
+        #   ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
+      - name: Update Comment
+        uses: ./.github/actions/comment
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  # Do a simple ping/pong status update to validate things are working
+  ping:
+    runs-on: ubuntu-latest
+    needs: parse
+    if: needs.parse.outputs.run-ping == 'true'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Ping Test
+        uses: ./.github/actions/ping
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
   test-clean-install-ubuntu:
     runs-on: ubuntu-latest
+
+    needs: parse
+    if: needs.parse.outputs.run-test-clean-install-ubuntu == 'true'
 
     steps:
       - name: Checkout repository
@@ -19,7 +72,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASAMI_ID=$(jqSUME }}
+          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
           role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
           aws-region: us-west-2
           role-duration-seconds: 21600
@@ -66,6 +119,9 @@ jobs:
   test-clean-install-rhel:
     runs-on: ubuntu-latest
 
+    needs: parse
+    if: needs.parse.outputs.run-test-clean-install-rhel == 'true'
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -73,7 +129,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASAMI_ID=$(jqSUME }}
+          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
           role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
           aws-region: us-west-2
           role-duration-seconds: 21600
