--- a/.github/actions/parse-test/action.yaml
+++ b/.github/actions/parse-test/action.yaml
@@ -6,12 +6,9 @@ outputs:
   run-ping:
     description: Will be 'true' if the 'ping' job should run
     value: ${{ steps.parse.outputs.ping }}
-  run-test-clean-install-ubuntu:
-    description: Will be 'true' if the 'test-clean-install-ubuntu' job should run
-    value: ${{ steps.parse.outputs.ubuntu }}
-  run-test-clean-install-rhel:
-    description: Will be 'true' if the 'test-clean-install-rhel' job should run
-    value: ${{ steps.parse.outputs.rhel }}
+  test-distros:
+    description: Will be either an empty string or a json formatted array of distros
+    value: ${{ steps.parse.outputs.test_distros }}
 runs:
   using: composite
   steps:
@@ -27,21 +24,25 @@ runs:
         printf "Event name is %s\n" "$EVENT_NAME"
         printf "Args are %s\n" "$ARGS"
         printf "\n\nslash_command is %s\n\n" "$DEBUG"
-        COMMANDS=(PING UBUNTU RHEL) #all options here
-        if printf "%s" "${ARGS^^}" | grep -qE '\bALL\b'; then
-          # "all" explicitly does not include "ping"
-          for cmd in "${COMMANDS[@]}"; do
-            [[ $cmd == "PING" ]] && ! { printf "%s" "${ARGS^^}" | grep -qE '\bPING\b'; } && continue
-            printf -v "$cmd" "true"
-          done
+        DISTROS=(UBUNTU RHEL) #all options here
+        TEST_DISTROS=()
+        # Check if ping command is included
+        if printf "%s" "${ARGS^^}" | grep -qE '\bPING\b'; then
+          printf "ping=true\n" >> $GITHUB_OUTPUT
         else
-          for cmd in "${COMMANDS[@]}"; do
-            if printf "%s" "${ARGS^^}" | grep -qE "\b${cmd}\b"; then
-              printf -v "$cmd" "true"
+          printf "ping=false\n" >> $GITHUB_OUTPUT
+        fi
+        if printf "%s" "${ARGS^^}" | grep -qE '\bALL\b'; then
+          TEST_DISTROS+=("${DISTROS[@]}")
+        else
+          for distro in "${DISTROS[@]}"; do
+            if printf "%s" "${ARGS^^}" | grep -qE "\b${distro}\b"; then
+              TEST_DISTROS+=(${distro})
             fi
           done
         fi
-        for out in "${COMMANDS[@]}"; do
-          printf "%s=%s\n" "${out,,}" "${!out:-false}" >> $GITHUB_OUTPUT
-          printf "%s=%s\n" "${out,,}" "${!out:-false}"
-        done
+        if [ ${#TEST_DISTROS[@]} -eq 0 ]; then
+          printf "test_distros=""\n" >> $GITHUB_OUTPUT
+        else
+          printf "test_distros=%s\n" "$(jq --compact-output --null-input '$ARGS.positional' --args -- "${TEST_DISTROS[@],,}")" >> $GITHUB_OUTPUT
+        fi
