--- a/.github/workflows/test-rke2-cluster.yaml
+++ b/.github/workflows/test-rke2-cluster.yaml
@@ -21,53 +21,53 @@ jobs:
   # Parse the command, so we can decide which tests to run.
   # Valid commands: "/test all", "/test ubuntu", "/test rhel"
   # We can do as many of these as we want to get as granular as we want.
-  parse:
-    runs-on: ubuntu-latest
-    outputs:
-      run-ping: ${{ steps.parse.outputs.run-ping }}
-      test-distros: ${{ steps.parse.outputs.test-distros }}
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
-          ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
-      - name: Parse Args
-        id: parse
-        uses: ./.github/actions/parse-test
+  # parse:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     run-ping: ${{ steps.parse.outputs.run-ping }}
+  #     test-distros: ${{ steps.parse.outputs.test-distros }}
+  #   steps:
+  #     - name: Checkout Repo
+  #       uses: actions/checkout@v3
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
+  #         ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
+  #     - name: Parse Args
+  #       id: parse
+  #       uses: ./.github/actions/parse-test
 
-  # Update the comment that triggered the /test command to show the run url
-  comment:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
-          ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
-      - name: Update Comment
-        uses: ./.github/actions/comment
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+  # # Update the comment that triggered the /test command to show the run url
+  # comment:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Repo
+  #       uses: actions/checkout@v3
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
+  #         ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
+  #     - name: Update Comment
+  #       uses: ./.github/actions/comment
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Do a simple ping/pong status update to validate things are working
-  ping:
-    runs-on: ubuntu-latest
-    needs: parse
-    if: needs.parse.outputs.run-ping == 'true'
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
-          ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
-      - name: Ping Test
-        uses: ./.github/actions/ping
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+  # # Do a simple ping/pong status update to validate things are working
+  # ping:
+  #   runs-on: ubuntu-latest
+  #   needs: parse
+  #   if: needs.parse.outputs.run-ping == 'true'
+  #   steps:
+  #     - name: Checkout Repo
+  #       uses: actions/checkout@v3
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
+  #         ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
+  #     - name: Ping Test
+  #       uses: ./.github/actions/ping
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
   test-rke2-cluster:
     runs-on: ubuntu-latest
@@ -78,7 +78,7 @@ jobs:
 
     name: Test ${{ matrix.test-distros }} AMI
 
-    needs: parse
+    # needs: parse
 
     steps:
       - name: Checkout repository
