--- a/.github/workflows/test-rke2-cluster.yaml
+++ b/.github/workflows/test-rke2-cluster.yaml
@@ -71,7 +71,7 @@ jobs:
 
   test-rke2-cluster:
     runs-on: ubuntu-latest
-    if: ${{ needs.parse.outputs.test-distros != '' }}
+    # if: ${{ needs.parse.outputs.test-distros != '' }}
     strategy:
       matrix:
         test-distros: [ubuntu, rhel]
