--- a/.github/workflows/test-rke2-cluster.yaml
+++ b/.github/workflows/test-rke2-cluster.yaml
@@ -12,10 +12,10 @@ permissions:
   contents: write # For executing the repository_dispatch event
   pull-requests: write # For doing the emoji reaction on a PR comment
 
-defaults:
-  run:
-    # We need -e -o pipefail for consistency with GitHub Actions' default behavior
-    shell: bash -e -o pipefail {0}
+# defaults:
+#   run:
+#     # We need -e -o pipefail for consistency with GitHub Actions' default behavior
+#     shell: bash -e -o pipefail {0}
 
 jobs:
   # Parse the command, so we can decide which tests to run.
