--- a/.github/workflows/test-rke2-cluster.yaml
+++ b/.github/workflows/test-rke2-cluster.yaml
@@ -83,10 +83,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
-          ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
+        # with:
+        #   token: ${{ secrets.GITHUB_TOKEN }}
+        #   repository: ${{ github.event.client_payload.pull_request.head.repo.full_name || github.repository }}
+        #   ref: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
