make teardown always run even if prior jobs fail

--- a/.github/workflows/test-rke2-cluster.yaml
+++ b/.github/workflows/test-rke2-cluster.yaml
@@ -108,4 +108,5 @@ jobs:
         run: make test-cluster
 
       - name: Teardown test infrastructure
+        if: always()
         run: make teardown-infra
