Initial RKE2 Install script (#5)
* Initial RKE2 Install script

* STIG RKE2 and add tests for rke_startup.sh

* Add multinode support to new test tf module

* Update make targets and e2e terraform to remove rancher module

* Added support for grabbing kubeconfig from bootstrap to make targets

* Added make targets for local testing

* add .pem files to gitignore

* add comments to make targets for make help

* Add readme info about local testing

* Updates to handle selinux for RHEL

* Change test instance sizes to rke2 recommended specs

* Add non-cis pss

---------

Co-authored-by: Jacob May <jacob.may@defenseunicorns.com>
Co-authored-by: Micah Nagel <micah.nagel@defenseunicorns.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,14 @@ crash.log
 # Packer manifest
 manifest.json
 
+# Local .terraform files
+.terraform/
+.terraform.lock.hcl
+
+# Auto tfvars used for local testing
+*.auto.tfvars
 # Packer auto vars
 *.auto.pkrvars.hcl
+
+# SSH private keys
+*.pem
