--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -29,20 +29,29 @@ runs:
         GITHUB_OWNER: ${{ github.event.client_payload.github.payload.repository.owner.login || github.repository_owner }}
 
     - name: Validate ${{ inputs.distro }} AMI
+      shell: bash -e -o pipefail {0}
       run: make validate-ami-${{ inputs.distro }}
 
     - name: Publish ${{ inputs.distro }} AMI
+      shell: bash -e -o pipefail {0}
       run: make publish-ami-${{ inputs.distro }}
 
     - name: Test ${{ inputs.distro }} AMI
+      shell: bash -e -o pipefail {0}
       env:
         SHA: ${{ github.sha }}
         DISTRO: ${{ inputs.distro }}
-      run: make test-cluster
+      run: make test-cluster DISTRO="${{ inputs.distro }}"
 
     - name: Teardown test infrastructure
+      shell: bash -e -o pipefail {0}
       if: always()
-      run: make teardown-infra
+      run: make teardown-infra DISTRO="${{ inputs.distro }}"
+
+    - name: Cleanup ${{ inputs.distro }} AMI
+      shell: bash -e -o pipefail {0}
+      if: always()
+      run: make cleanup-ami
 
     # Update GitHub status for successful pipeline run
     - name: "Update GitHub Status for success"
