--- a/packer/stig-configs/rke2-config.yaml
+++ b/packer/stig-configs/rke2-config.yaml
@@ -1,6 +1,8 @@
 profile: "cis-1.23"
+protect-kernel-defaults: true
 write-kubeconfig-mode: "0640"
 selinux: true
+secrets-encryption: true
 pod-security-admission-config-file: /etc/rancher/rke2/default-pss.yaml
 disable:
   - rke2-ingress-nginx
@@ -8,13 +10,22 @@ disable:
 kube-controller-manager-arg:
   - tls-min-version=VersionTLS12
   - tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+  - bind-address=127.0.0.1
+  - use-service-account-credentials=true
 kube-scheduler-arg:
   - tls-min-version=VersionTLS12
   - tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
 kube-apiserver-arg:
+  - anonymous-auth=false
   - insecure-port=0
   - audit-log-mode=blocking-strict
+  - audit-policy-file=/etc/rancher/rke2/audit-policy.yaml
+  - audit-log-maxage=30
+  - authorization-mode=RBAC,Node
   - tls-min-version=VersionTLS12
   - tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
 kubelet-arg:
+  - authorization-mode=Webhook
+  - anonymous-auth=false
   - streaming-connection-idle-timeout=5m
+  - read-only-port=0
