refactor: use new org GitHub role for CI. (#35)
* refactor: use new org GitHub role for CI.

* Update Terraform backend bucket for new org CI account.

* Specify Terraform versions to not use 1.6.0.

* Correctly specify Terraform version.

* Use the correct version of Terraform on the runner.

* Update VPC and subnet names for test infra.

* Add debug to get-kubeconfig.sh.

* Setting terraform_wrapper to false.

--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -28,6 +28,11 @@ runs:
         GITHUB_REF: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
         GITHUB_OWNER: ${{ github.event.client_payload.github.payload.repository.owner.login || github.repository_owner }}
 
+    - uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: "1.5.7"
+        terraform_wrapper: false
+
     - name: Validate ${{ inputs.distro }} AMI
       shell: bash -e -o pipefail {0}
       run: make validate-ami-${{ inputs.distro }}
