fix: uds install

--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -27,6 +27,9 @@ jobs:
           aws-region: us-west-2
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
+      - name: Setup UDS
+        if: always()
+        uses: defenseunicorns/uds-common/.github/actions/setup@v0.3.11
       - name: Validate Ubuntu AMI
         run: uds run validate-ami-ubuntu
       - name: Build Ubuntu AMI
@@ -44,6 +47,9 @@ jobs:
           aws-region: us-west-2
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
+      - name: Setup UDS
+        if: always()
+        uses: defenseunicorns/uds-common/.github/actions/setup@v0.3.11
       - name: Validate RHEL AMI
         run: uds run validate-ami-rhel
       - name: Build RHEL AMI
