--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -14,8 +14,12 @@ permissions:
   contents: read
 
 jobs:
-  test-ubuntu-build:
+  test-build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        base: ["ubuntu", "rhel"]
+        aws_env: ["commercial"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -30,27 +34,7 @@ jobs:
       - name: Setup UDS
         if: always()
         uses: defenseunicorns/uds-common/.github/actions/setup@v0.4.0
-      - name: Validate Ubuntu AMI
-        run: uds run --no-progress validate-ami-ubuntu
-      - name: Build Ubuntu AMI
-        run: uds run --no-progress build-ami-ubuntu
-  test-rhel-build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}
-          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
-          # 21600 seconds == 6 hours
-          role-duration-seconds: 21600
-      - name: Setup UDS
-        if: always()
-        uses: defenseunicorns/uds-common/.github/actions/setup@v0.4.0
-      - name: Validate RHEL AMI
-        run: uds run --no-progress validate-ami-rhel
-      - name: Build RHEL AMI
-        run: uds run --no-progress build-ami-rhel
+      - name: Validate ${{ matrix.base }} AMI
+        run: uds run --no-progress validate-ami-${{ matrix.base }}
+      - name: Build ${{ matrix.base }} AMI
+        run: uds run --no-progress build-ami-${{ matrix.base }}
