--- a/.github/workflows/publish-aws.yaml
+++ b/.github/workflows/publish-aws.yaml
@@ -8,14 +8,20 @@ on:
       - "packer/aws/**"
       - "packer/scripts/**"
       - ".github/workflows/publish-aws.yaml"
+  schedule:
+    - cron: '0 6 1 * *' # Runs monthly at midnight MST
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  publish-ubuntu:
+  publish:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        base: ["ubuntu", "rhel"]
+        aws_env: ["commercial"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -30,23 +36,5 @@ jobs:
       - name: Setup UDS
         if: always()
         uses: defenseunicorns/uds-common/.github/actions/setup@v0.4.0
-      - name: Publish Ubuntu AMI
-        run: uds run --no-progress publish-ami-ubuntu
-  publish-rhel:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}
-          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
-          # 21600 seconds == 6 hours
-          role-duration-seconds: 21600
-      - name: Setup UDS
-        if: always()
-        uses: defenseunicorns/uds-common/.github/actions/setup@v0.4.0
-      - name: Publish RHEL AMI
-        run: uds run --no-progress publish-ami-rhel
+      - name: Publish ${{ matrix.base }} AMI
+        run: uds run --no-progress publish-ami-${{ matrix.base }}
