--- a/tasks/test.yaml
+++ b/tasks/test.yaml
@@ -48,7 +48,10 @@ tasks:
             -backend-config="key=tfstate/ci/install/${SHA}-packer-${DISTRO}-rke2-startup-script.tfstate" \
             -backend-config="region=us-west-2"
           terraform apply -var="ami_id=${TEST_AMI_ID}" -var-file="${DISTRO}.tfvars" -auto-approve
-          . ${root_dir}/${E2E_TEST_DIR}/scripts/get-kubeconfig.sh
+          source ${root_dir}/${E2E_TEST_DIR}/scripts/get-kubeconfig.sh
+        shell:
+          darwin: "bash"
+          linux: "bash"
       - wait:
           cluster:
             kind: nodes
