--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -48,12 +48,12 @@ runs:
     - name: Test ${{ inputs.distro }} AMI
       shell: bash -e -o pipefail {0}
 
-      run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ inputs.distro }} -l debug
+      run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ inputs.distro }}
 
     - name: Teardown test infrastructure
       shell: bash -e -o pipefail {0}
       if: always()
-      run: uds run --no-progress teardown-infra --set DISTRO=${{ inputs.distro }}
+      run: uds run --no-progress teardown-infra --set DISTRO=${{ inputs.distro }} -l debug
 
     - name: Cleanup ${{ inputs.distro }} AMI
       shell: bash -e -o pipefail {0}
