--- a/tasks/test.yaml
+++ b/tasks/test.yaml
@@ -52,20 +52,14 @@ tasks:
         shell:
           darwin: "bash"
           linux: "bash"
-      - env:
-        - KUBECONFIG=~/.kube/rke2-config
-        wait:
+      - wait:
           cluster:
             kind: nodes
             condition: Ready
             name: kubernetes.io/os=linux # Get all nodes using a default label
         maxTotalSeconds: 600
-      - env:
-        - KUBECONFIG=~/.kube/rke2-config
-        cmd: ./uds zarf tools kubectl apply -f ${E2E_TEST_DIR}/manifests/test.yaml
-      - env:
-        - KUBECONFIG=~/.kube/rke2-config
-        wait:
+      - cmd: ./uds zarf tools kubectl apply -f ${E2E_TEST_DIR}/manifests/test.yaml
+      - wait:
           cluster:
             kind: Pod
             name: test-pod
@@ -79,7 +73,10 @@ tasks:
       - env:
         - KUBECONFIG=~/.kube/rke2-config
         cmd: |
-          ./uds zarf tools kubectl get nodes || true
+          ls ~/.kube || true
+          cd && pwd
+          echo $KUBECONFIG
+          ./uds zarf tools kubectl get nodes --kubeconfig=~/.kube/config || true
           ./uds zarf tools kubectl get all -A || true
       - cmd: |
           TEST_AMI_ID=$(jq -r '.builds[-1].artifact_id' ${AWS_DIR}/manifest.json | cut -d ":" -f2)
