--- a/tasks/test.yaml
+++ b/tasks/test.yaml
@@ -52,17 +52,20 @@ tasks:
         shell:
           darwin: "bash"
           linux: "bash"
-      - cmd: "echo ~/.kube/rke2-config"
-        setVariables:
-          - name: KUBECONFIG
-      - wait:
+      - env:
+         - KUBECONFIG=~/.kube/rke2-config
+        wait:
           cluster:
             kind: nodes
             condition: Ready
             name: kubernetes.io/os=linux # Get all nodes using a default label
         maxTotalSeconds: 600
-      - cmd: ./uds zarf tools kubectl apply -f ${E2E_TEST_DIR}/manifests/test.yaml
-      - wait:
+      - env:
+         - KUBECONFIG=~/.kube/rke2-config
+        cmd: ./uds zarf tools kubectl apply -f ${E2E_TEST_DIR}/manifests/test.yaml
+      - env:
+         - KUBECONFIG=~/.kube/rke2-config
+        wait:
           cluster:
             kind: Pod
             name: test-pod
@@ -73,13 +76,6 @@ tasks:
   - name: teardown-infra
     description: "Destroy test infrastructure"
     actions:
-      - cmd: "echo ~/.kube/rke2-config"
-        setVariables:
-          - name: KUBECONFIG
-      - cmd: |
-          echo $KUBECONFIG
-          ./uds zarf tools kubectl get nodes || true
-          ./uds zarf tools kubectl get all -A || true
       - cmd: |
           TEST_AMI_ID=$(jq -r '.builds[-1].artifact_id' ${AWS_DIR}/manifest.json | cut -d ":" -f2)
           echo "TEST AMI: ${TEST_AMI_ID}"
