--- a/tasks/test.yaml
+++ b/tasks/test.yaml
@@ -51,20 +51,14 @@ tasks:
         shell:
           darwin: "bash"
           linux: "bash"
-      - env:
-         - KUBECONFIG=~/.kube/rke2-config
-        wait:
+      - wait:
           cluster:
             kind: nodes
             condition: Ready
             name: kubernetes.io/os=linux # Get all nodes using a default label
         maxTotalSeconds: 600
-      - env:
-         - KUBECONFIG=~/.kube/rke2-config
-        cmd: ./uds zarf tools kubectl apply -f ${E2E_TEST_DIR}/manifests/test.yaml
-      - env:
-         - KUBECONFIG=~/.kube/rke2-config
-        wait:
+      - cmd: ./uds zarf tools kubectl apply -f ${E2E_TEST_DIR}/manifests/test.yaml
+      - wait:
           cluster:
             kind: Pod
             name: test-pod
