--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -28,10 +28,11 @@ runs:
         GITHUB_REF: ${{ github.event.client_payload.pull_request.head.ref || github.ref_name }}
         GITHUB_OWNER: ${{ github.event.client_payload.github.payload.repository.owner.login || github.repository_owner }}
 
-    - uses: hashicorp/setup-terraform@v3
+    - name: Setup Tofu
+      uses: opentofu/setup-opentofu@ae80d4ecaab946d8f5ff18397fbf6d0686c6d46a # v1.0.3
       with:
-        terraform_version: "1.5.7"
-        terraform_wrapper: false
+        tofu_wrapper: false
+        tofu_version: 1.6.2
 
     - name: Setup UDS
       if: always()
