--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -17,6 +17,7 @@ jobs:
   test-build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         base: ["ubuntu", "rhel"]
         aws_env: ["commercial"]
